# FlintViz

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: page.yml  release.yml
bugs/: 001-api-tests-unauthenticated-file-read-write.md  002-failure-decode-unbounded-gzip-expansion.md  003-cve-2026-45149-brace-expansion.md  README.md  rustsec-audit.md
crates/flint-viz/: Cargo.toml
crates/flint-viz-replay/: Cargo.toml
crates/flint-viz-replay/src/: aabb.rs  assertions.rs  engine.rs  lib.rs  model.rs
crates/flint-viz/src/: cli.rs  embed.rs  main.rs  state.rs  util.rs  watch.rs
crates/flint-viz/src/api/: config.rs  events.rs  failure.rs  mod.rs  replay.rs  tests.rs
crates/flint-viz/src/replay/: aabb.rs  assertions.rs  engine.rs  mod.rs  model.rs  player.rs  source_map.rs
docs/: README.md  api-contract.md  architecture.md  development.md  frontend-maintenance.md  replay-contract.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/public/: blocks.json
frontend/scripts/: fetch-assets.bash  fetch-assets.ts
frontend/src/: App.tsx  index.css  main.tsx  routing.ts
frontend/src/api/: client.ts  events.ts  failurePayload.ts  localEngine.ts  standalone.ts  toast.ts  types.ts
frontend/src/api/__tests__/: localEngine.test.ts
frontend/src/components/: BootSplash.tsx  ErrorBoundary.tsx  PaneFallback.tsx  StaleBadge.tsx  Toast.tsx  toastStore.ts
frontend/src/editor/: Editor.tsx  flint.schema.json  formatJson.ts  jsonPointerToRange.ts  markers.ts  registerSchema.ts
frontend/src/editor/__tests__/: jsonPointerToRange.test.ts  markers.test.ts
frontend/src/layout/: SplitLayout.tsx
frontend/src/panels/: Assertions.tsx  Inventory.tsx  TestList.tsx  buildTree.ts  itemIcons.ts  newTestTemplate.ts  slotLabel.ts
frontend/src/panels/__tests__/: buildTree.test.ts
frontend/src/store/: assertions.ts  config.ts  crosslink.ts  failure.ts  replay.ts  sourceMap.ts  world.ts
frontend/src/store/__tests__/: assertions.test.ts  replay.test.ts  sourceMap.test.ts
frontend/src/timeline/: Controls.tsx  FailureBanner.tsx  Scrubber.tsx  markers.ts  playback.ts
frontend/src/timeline/__tests__/: markers.test.ts  playback.test.ts
frontend/src/views/: FailureView.tsx
frontend/src/wasm/flint-viz-replay/: flint_viz_replay.d.ts  flint_viz_replay.js  flint_viz_replay_bg.wasm  flint_viz_replay_bg.wasm.d.ts  package.json
frontend/src/world/: AssertionGhosts.tsx  BlockMeshLayers.tsx  Camera.tsx  CanvasShell.tsx  CleanupOverlay.tsx  CompassGizmo.tsx  Entities.tsx  FailureOverlay.tsx  Highlights.tsx  Scene.tsx  SceneToolbar.tsx  World.tsx  assetZip.ts  atlas.ts  blockAdapter.ts  blockDefaults.ts  buildTextureAtlas.ts  cameraFlyTo.ts  cameraFraming.ts  cameraStore.ts  createAtlasProvider.ts  instancing.ts  overlayStore.ts  textureNormalize.ts  useBlockProviders.ts
plan/: README.md
plan/issues/: 0001-cargo-workspace.md  0002-cli-args.md  0003-frontend-scaffold.md  0004-rust-embed.md  0005-xtask-build.md  0006-list-tests-endpoint.md  0007-get-test-endpoint.md  0008-replay-endpoint-stub.md  0009-file-watcher-sse.md  0010-replay-data-model.md  0011-replay-place-fill.md  0012-replay-place-each.md  0013-replay-remove.md  0014-replay-player-actions.md  0015-replay-assertions.md  0016-replay-source-map.md  0017-api-client.md  0018-zustand-store.md  0019-test-list-sidebar.md  0020-monaco-editor.md  0021-flint-json-schema.md  0022-deepslate-canvas.md  0023-render-world-state.md  0024-camera-controls.md  0025-cleanup-region-overlay.md  0026-action-highlights.md  0027-assertion-ghost-overlay.md  0028-timeline-scrubber.md  0029-playback-controls.md  0030-inventory-panel.md  0031-assertion-panel.md  0032-source-visual-crosslink.md  0033-error-states.md  0034-readme.md  0035-flint-steel-runtime.md  0036-rotate-blocks.md  0037-replay-set-slot.md  0038-replay-use-item-on.md  0039-replay-select-hotbar.md  0040-seperate-actions.md  (+10 more)
scripts/: format-json-core.js  format-json.js
xtask/src/: main.rs
(+7 files in other folders)
