[package]
name = "flint-viz-replay"
version = "0.1.0"
edition = "2024"
license = "GPL-2.0-only"
description = "Platform-neutral Flint test replay adapter for FlintViz"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
wasm = ["dep:console_error_panic_hook", "dep:wasm-bindgen"]

[dependencies]
flint-core.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = "1"
console_error_panic_hook = { version = "0.1", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
