[package]
name = "flint-viz"
version = "0.1.0"
edition = "2024"

[features]
default = []
embed-frontend = ["dep:rust-embed", "dep:mime_guess"]

[dependencies]
axum = "0.8"
clap = { version = "4", features = ["derive"] }
flint-core = { git = "https://github.com/FlintTestMC/flint-core", tag = "v1.1.3" }
mime_guess = { version = "2", optional = true }
notify = "6"
rust-embed = { version = "8", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.48", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2"
webbrowser = "1"

[dev-dependencies]
tempfile = "3"
